# KatWebSite

./: .gitignore  Cargo.toml  README.md  config.toml  example.toml  rustfmt.toml
.github/workflows/: rust.yml
docs/: core.md  example.toml  run.toml
examples/: config.toml
examples/html/: core.md  index.md  main.js  style.css  style.sass  style.scss  test.md
src/: 404.html  builder.rs  copier.rs  http.rs  main.rs  runner.rs
template/_includes/: katwebsite_head.html  katwebsite_nav_main.html  katwebsite_script_base.js  katwebsite_theme_base.css  katwebsite_theme_base.sass  katwebsite_theme_base.scss  modern_normalize.css  modern_normalize.scss
template/_layouts/: default.html
