[package]
name = "katwebsite"
license = "MIT"
version = "0.1.0"
repository = "https://github.com/katattakd/KatWebSite"
authors = ["katattakd <katattakd@pm.me>"]
description = "A static site generator and fast web server designed to fit the needs of most sites. More information is available in the project's GitHub repository."
categories = ["network-programming", "web-programming::http-server", "web-programming::websocket", "command-line-utilities", "text-processing"]
edition = '2018'

[dependencies]
clap = { version = ">=3.0.0-beta.2", features = ["wrap_help", "yaml"] }
actix-web = { version = ">=4.0.0-beta.1", features = ["rustls"] }
actix-files = ">=0.6.0-beta.1"

# Stable deps which rarely require updates.
comrak = "0.9.1"
exitcode = "1.1.2"
flexi_logger = "0.17.1"
futures = "0.3.12"
glob = "0.3.0"
log = "0.4.14"
toml = "0.5.8"
serde = "1.0.123"
serde_derive = "1.0.123"
rayon = "1.5.0"
rustls = "0.19.0"
rustls-pemfile = "0.2.0"

[profile.dev]
rpath = true

[profile.release]
lto = true
panic = 'abort'

[profile.bench]
lto = true
