[package]
name = "katwebsite"
license = "MIT"
version = "0.1.0"
repository = "https://github.com/katattakd/KatWebSite"
authors = ["katattakd <katattakd@pm.me>"]
description = "A static site generator and fast web server designed to fit the needs of most sites. More information is available in the project's GitHub repository."
categories = ["network-programming", "web-programming::http-server", "web-programming::websocket", "command-line-utilities", "text-processing"]
edition = '2018'

[dependencies]
### CLI argument parsing [main.rs]
clap = { version = ">=3.0.0-beta.2", features = ["wrap_help", "yaml"] }

### HTTP server [http.rs]
actix-web = { version = ">=4.0.0-beta.1", features = ["rustls"] }
actix-files = ">=0.6.0-beta.1"


# Stable deps which rarely require updates.

### HTML sanitizing [builder.rs]
ammonia = "3.1.1"

### Markdown parsing [builder.rs]
comrak = "0.9.1"

### UNIX exit codes
exitcode = "1.1.2"

### Frontmatter parsing [builder.rs]
extract-frontmatter = "2.1.0"

### CLI logging
flexi_logger = "0.17.1"
log = "0.4.14"

### HTTP server concurrency [http.rs]
futures = "0.3.12"

### Parallel file loading [builder.rs]
rayon = "1.5.0"

### SASS compilation [builder.rs]
grass = "0.10.4"

### Liquid templating
liquid = "0.22.0"

### Config parsing [main.rs]
toml = "0.5.8"
serde = "1.0.123"
serde_derive = "1.0.123"

### TLS server [http.rs]
rustls = "0.19.0"
rustls-pemfile = "0.2.0"

[profile.dev]
rpath = true

[profile.release]
lto = true
panic = 'abort'

[profile.bench]
lto = true
