[package]
name = "katwebsite"
license = "MIT"
version = "0.1.0"
repository = "https://github.com/katattakd/KatWebSite"
authors = ["Kat <katattakd@pm.me>"]
description = "A minimal static site generator and web server."
categories = ["network-programming", "web-programming::http-server", "web-programming::websocket", "command-line-utilities", "text-processing"]
edition = '2018' # Note: Update to edition 2021 when it's ready. https://blog.rust-lang.org/inside-rust/2021/03/04/planning-rust-2021.html

[dependencies]
### CLI argument parsing [main.rs]
clap = { version = ">=3.0.0-beta.2", features = ["wrap_help", "yaml"] }

### HTTP server [http.rs]
#actix-web = { version = ">=4.0.0-beta.6", features = ["rustls"] }
#actix-files = ">=0.6.0-beta.4"
# Workaround for https://github.com/actix/actix-web/issues/2185: https://github.com/actix/actix-web/issues/2185#issuecomment-824266090
actix-files = "0.6.0-beta.4"
actix-http = "=3.0.0-beta.5"
actix-rt = "2.2.0"
actix-service = "=2.0.0-beta.5"
actix-web = { version = "=4.0.0-beta.5", features = ["rustls"] }

# Stable deps which rarely require updates.

### HTML sanitizing [builder.rs]
ammonia = "3.1.1"

### Markdown parsing [builder.rs]
comrak = "0.10.1"

### UNIX exit codes
exitcode = "1.1.2"

### Frontmatter parsing [builder.rs]
extract-frontmatter = "2.1.0"

### CLI logging
flexi_logger = "0.17.1"
log = "0.4.14"

### Recursive copying [copier.rs]
fs_extra = "1.2.0"

### HTTP server concurrency [http.rs]
futures = "0.3.14"

### Performance-optimized memory allocator
mimalloc = { version = "0.1.25", default-features = false }

### Parallel file loading [builder.rs]
rayon = "1.5.0"

### SASS compilation [builder.rs]
grass = "0.10.4"

### Liquid templating
liquid = "0.22.0"
liquid-lib = { version = "0.22.0", features = ["all"] }

### Config parsing [main.rs]
toml = "0.5.8"
serde = "1.0.125"
serde_derive = "1.0.125"

### TLS server [http.rs]
rustls = "0.19.1"
rustls-pemfile = "0.2.1"

[profile.dev]
rpath = true

[profile.release]
lto = 'fat'
codegen-units = 1
panic = 'abort'

[profile.bench]
lto = true
